# rsomics-vcf-stats

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs  main.rs
tests/: compat.rs  smoke.rs
tests/golden/: multiallelic.vcf  small.vcf
