[package]
name = "rsomics-vcf-stats"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Basic VCF variant statistics — SNP/indel counts, Ti/Tv ratio"

[[bin]]
name = "rsomics-vcf-stats"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
