[package]
name = "rsomics-vcf-stats"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
description = "Basic VCF variant statistics — SNP/indel counts, Ti/Tv ratio"

[[bin]]
name = "rsomics-vcf-stats"
path = "src/main.rs"


[lib]
name = "rsomics_vcf_stats"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

